overflow hidden fixed

--- a/css/summary.css
+++ b/css/summary.css
@@ -184,6 +184,7 @@ body {
     width: 100%;
     height: 100vh;
     position: relative;
+    overflow-x: hidden;
 }
 
 .main .content {
